[package]
name = "ssvm_process_interface"
version = "0.1.3"
authors = ["yiying <yiying@secondstate.io>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/second-state/ssvm_process_interface"
license-file = "LICENSE"
description = "A Rust library that provides Rust to WebAssembly developers with syntax for running commands functionality"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ssvm_process_interface"
path = "src/lib.rs"
